--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "next": "15.2.1",
     "openai": "^4.86.1",
     "react": "^19.0.0",
